# mosf

./: README.md  main.py  pyproject.toml
docs/: setting-up-your-external-client-app.md  the-jupyterhub-callback-service.md  using-the-standalone-callback-server.md
src/mosf/: oneshot.py  server.py  widget.py
src/mosf/static/: callback.html  widget.css  widget.js
src/mosf/widget/: __init__.py  _access_token.py  _login_button.py  standalone.py  widget.py
