[project]
name = "mosf"
version = "0.1.0"
description = "A 'Sign in to Salesforce' Anywidget button for Marimo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "attrs>=25.3.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.11",
]
jh = [
    "fastapi>=0.115.12",
]
server = [
    "fastapi>=0.115.12",
]
widget = [
    "anywidget>=0.9.18",
    "requests>=2.32.3",
    "requests-oauthlib>=2.0.0",
]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["E", "F", "I", "N", "D"]
ignore = [
  "D211",  # allow one blank line before class docstrings (D203)
  "D212",  # allow summary to start on the second line (D213)
  "D203",  # put a newline between class declaration and their docstrings
]

[tool.uv.sources]
mosf = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src/"]
